--- a/src/components/entry/Entry.css
+++ b/src/components/entry/Entry.css
@@ -26,31 +26,29 @@ textarea {
 }
 
 .image-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 40px;
-}
-
-.image-container .b-cont {
-  position: relative;
-}
-
-.image {
-  max-width: 100%;
-  max-height: 200px;
-}
-
-.del-but {
-  position: absolute;
-  top: 30px;
-  right: -25px;
-  color: red;
-  border: none;
-  background: none;
-  margin-left: 10px;
-  font-size: 18px;
-  cursor: pointer;
-}
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 40px;
+  }
+  
+  .image-container .b-cont {
+    display: flex;
+    align-items: center; 
+  }
+  
+  .image {
+    max-width: 100%;
+    max-height: 200px;
+  }
+  
+  .del-but {
+    color: red;
+    border: none;
+    background: none;
+    margin-left: 10px;
+    font-size: 18px;
+    cursor: pointer;
+  }
 
 .d-btn-cont {
   display: flex;
